	removed context.h and context.c
	added lock and tls multithread API to neko.h
	std : added date_get_tz()
	mod_neko : added log_message
	regexp : fix for unmatched optional groups, return null instead of empty string
	threads : for windows, use critical_section instead of mutex for locks
	threads : for posix, use a recursive mutex which match windows behavior

2008-03-16 : 1.7.0
	nekoc : allow binary ast format with -p, don't allow inline nxml
	std : allow int32_new float parameter
	vm : reduce debug infos memory size by 16
	vm : fixed $int in case of overflow
	regexp : upgraded windows ndll to use pcre 7.3 with utf8 support
	fixed : math_round(0.5) is now 1
	fixed : date_set_hour and date_set_day crash with invalid dates
	fixed : bug in vm/callback.c when stack address is >2GB
	sockets : added support for socket_poll for Windows
	sockets : added socket_poll_prepare and socket_poll_events
	thread : added tls_create, tls_set, tls_get
	vm : threaded interpreter (gcc only)
	vm : always use COMPACT_TABLE for objects
	mod_neko : log some errors into apache log
	neko+vm : added perf statistics hooks (-stats)
	mod_neko : scriptable configuration and statistics
	regexp : allow more than 10 matches
	std : added process_close
	vm : added $aconcat
	nekoc : fixed big arrays declarations
	std : added sys_is64

2007-07-25 : 1.6.0
	display error message when uncaught exception in neko thread
	fix bug in long run JIT programs : no C functions callable anymore
	use a smarter way to prevent C stack overflow
	nekoc : stack align error message
	set max-stack-per-function to 128 and default-stack-size to 256
	jit now check stack overflow on function entry and not on every push
	mod_neko2 set MOD_NEKO=2 env var (for version detection)
	mod_neko2 : remove Apache 2.0 error message, use 302 http code for redirect
	fixed fallback of interp operator overloading
	fix for 64-bit CPU
	minor optimization for [0] jit array access
	gnuk/freebsd support